--- a/TechM Project.html
+++ b/TechM Project.html
@@ -98,7 +98,7 @@ a:hover {
       </div>
       <div class="col-sm-1">
         <a href=""><i class="fa fa-search" style="font-size: 18px; margin-top: 22px; color:black;"></i></a>
-        <a href="file:///C:/Users/Hp/Desktop/Project%201/Dashboard.html"><i class="fa fa-filter" style="font-size: 22px; margin-top: 20px; margin-left: 27px; color:black;"></i></a>
+        <a href="./Dashboard"><i class="fa fa-filter" style="font-size: 22px; margin-top: 20px; margin-left: 27px; color:black;"></i></a>
       </div>
     </div>
   </div>
