Update Application Scenario Patching.html

--- a/Application Scenario Patching.html
+++ b/Application Scenario Patching.html
@@ -184,15 +184,17 @@ a:hover {
                 <input type="text" id="ghome" name="ghome" value="auto populated">
               </div>
             </div>
+          </form>
             <button class="button button2">Cancel</button>
             <button class="button button3">Schedule Patch</button>
-            <a href="file:///E:/C%20disk/Desktop/Project%201/screen%203.html"><button onclick="myFunction()" class="button button1">Patch Now</button></a>
-            <script>
+            <button onclick="myFunction()" class="button button1">Patch Now</button>
+            </div>
+        <script>
               function myFunction() {
                 alert("Patching Initiated");
               }
-              </script>
-          </form>
-        </div>
+            </script>
+          
+        
     </body>
 </html>
