--- a/Application Scenario Upgrading.html
+++ b/Application Scenario Upgrading.html
@@ -178,15 +178,17 @@ a:hover {
               <input type="text" id="ghome" name="ghome">
             </div>
           </div>
+              </form>
           <button class="button button2">Cancel</button>
           <button class="button button3">Schedule Upgrade</button>
-          <a href="file:///E:/C%20disk/Desktop/Project%201/screen%203.html"><button onclick="myFunction()" class="button button1">Upgrade Now</button></a>
+          <button onclick="myFunction()" class="button button1">Upgrade Now</button>
+          </div>
           <script>
             function myFunction() {
               alert("Upgrading Initiated");
             }
             </script>
-            </form>
-      </div>
+            
+      
   </body>
 </html>
