--- a/Dashboard.html
+++ b/Dashboard.html
@@ -215,7 +215,7 @@ a:hover {
                 </div>
             </div>
             <button class="button button2">Clear</button>
-            <a href="./Server%20Details"><button class="button button1">Display</button></a>            
+            <a href="file:///C:/Users/Hp/Desktop/Project%201/Server%20Details.html"><button class="button button1">Display</button></a>            
           </div>
 
         <div class="container">
@@ -244,7 +244,7 @@ a:hover {
         </div>
       
         <div class="container">
-           <div class="row subheader versions">
+          <div class="row subheader versions">
             <a href="">
               <div class="col-sm-3 textbox">
                 <h2>4</h2>
@@ -252,12 +252,14 @@ a:hover {
                 <h5>Patch Ver. Jan 2022</h5>
               </div>
             </a>
-              <a href="">
-                <div class="col-sm-3 textbox">
+            <a href="">
+              <div class="col-sm-3 textbox">
                 <h2>2</h2>
                 <h4>Ver. 12.1.0.2</h4>
                 <h5>Patch Ver. Jan 2022</h5>
               </div>
             </a>
-            </div>
           </div>
+        </div>
+    </body>
+</html>
