--- a/Dashboard.html
+++ b/Dashboard.html
@@ -215,7 +215,7 @@ a:hover {
                 </div>
             </div>
             <button class="button button2">Clear</button>
-            <a href="file:///C:/Users/Hp/Desktop/Project%201/Server%20Details.html"><button class="button button1">Display</button></a>            
+            <a href="./Server%20Details"><button class="button button1">Display</button></a>            
           </div>
 
         <div class="container">
